--- a/.talismanrc
+++ b/.talismanrc
@@ -2,8 +2,8 @@ threshold: medium
 
 custom_patterns:
 
-- Password
-- username
+- Password=^[a-zA-Z0-9_]*$
+- username=^[a-zA-Z0-9_]*$
 
 custom_severities:
 
