--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,7 @@
-repos:
-  - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.12.0
+-   repo: https://github.com/thoughtworks/talisman
+    rev: 'v1.28.0'  # Update me!
     hooks:
-      - id: gitleaks
+    # either `commit` or `push` support
+    # -   id: talisman-push
+    - id: talisman-commit
+      entry: cmd --githook pre-commit
