--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,10 @@
--   repo: https://github.com/thoughtworks/talisman
-    rev: 'v1.28.0'  # Update me!
+-   repo: local
     hooks:
-    # either `commit` or `push` support
-    # -   id: talisman-push
-    - id: talisman-commit
-      entry: cmd --githook pre-commit
+    -   id: talisman-precommit
+        name: talisman
+        entry: bash -c 'if [ -n "${TALISMAN_HOME:-}" ]; then ${TALISMAN_HOME}/talisman_hook_script pre-commit; else echo "TALISMAN does not exist. Consider installing from https://github.com/thoughtworks/talisman . If you already have talisman installed, please ensure TALISMAN_HOME variable is set to where talisman_hook_script resides, for example, TALISMAN_HOME=${HOME}/.talisman/bin"; fi'
+        language: system
+        pass_filenames: false
+        types: [text]
+        verbose: true
+
