--- a/.talismanrc
+++ b/.talismanrc
@@ -1,3 +1,10 @@
 custom_severities:
 - detector: Base64Content
   severity: medium
+- detector: PasswordFile
+  severity: medium
+
+custom_patterns:
+- (?i)(.password)\s*=\s*[0-9a-zA-Z/+=_]{32}
+
+
